Released 4.7.0-RC