@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.enonic.cms</groupId>
     <artifactId>cms</artifactId>
-    <version>4.7.0-SNAPSHOT</version>
+    <version>4.7.0-RC</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
@@ -39,6 +39,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <forkMode>once</forkMode>
+          <argLine>-Xmx2048m -XX:MaxPermSize=700m -Djava.awt.headless=true</argLine>
+          <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <skip>${skipITs}</skip>
         </configuration>
       </plugin>
